- Fixed CSS for main page, so items do not overlap - Added light mode command

--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,18 @@
+html{
+    width: 100%;
+    height: 100%;
+}
+
 body{
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    min-height: 1000px;
+    display: flex;
+    flex-direction: column;
+    gap: 100px;
+    align-items: center;
+
     background-color: rgb(31, 31, 31);
     color: white;
 }
@@ -6,12 +20,9 @@ body{
 /* ===== Titles ====*/
 
 #titleContainer{
+    margin-top: 100px;
     width: 800px;
     height: 200px;
-    position: absolute;
-    left: 50%;
-    top: 100px;
-    transform: translateX(-50%);
     text-align: center;
     font-size: 100px;
     font-weight: bold;
@@ -30,10 +41,6 @@ body{
 /* ===== Keyboard ====*/
 
 #keyboard{
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
     display: flex;
     flex-direction: column;
     gap: 15px;
@@ -95,10 +102,6 @@ body{
     justify-content: center;
     padding: 20px;
     width: 500px;
-    position: absolute;
-    left: 50%;
-    bottom: 150px;
-    transform: translateX(-50%);
     font-size: 25px;
 
     border-left: 1px white solid;
@@ -131,7 +134,7 @@ body{
 /* ===== Other ====*/
 
 #helpHint{
-    position: absolute;
+    position: fixed;
     left: 50%;
     transform: translateX(-50%);
     bottom: 50px;
@@ -201,6 +204,35 @@ body{
     90% { transform: translate(1px, 2px) rotate(0deg); }
     100% { transform: translate(1px, -2px) rotate(-1deg);
         border-color: white; }
+}
+
+@keyframes correctKeyAnimLight {
+    0% {
+        border-color: black;
+    }
+    50%{
+        border-color: green;
+    }
+    100% {
+        border-color: black;
+     }
+}
+
+@keyframes incorrectKeyAnimLight {
+    0% { transform: translate(1px, 1px) rotate(0deg); 
+        border-color: black;}
+    10% { transform: translate(-1px, -2px) rotate(-1deg); }
+    20% { transform: translate(-3px, 0px) rotate(1deg); }
+    30% { transform: translate(3px, 2px) rotate(0deg); }
+    40% { transform: translate(1px, -1px) rotate(1deg); }
+    50% { transform: translate(-1px, 2px) rotate(-1deg);
+        border-color: red; }
+    60% { transform: translate(-3px, 1px) rotate(0deg); }
+    70% { transform: translate(3px, 1px) rotate(-1deg); }
+    80% { transform: translate(-1px, -1px) rotate(1deg); }
+    90% { transform: translate(1px, 2px) rotate(0deg); }
+    100% { transform: translate(1px, -2px) rotate(-1deg);
+        border-color: black; }
 }
 
 @keyframes scoreAdded {
